--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/status-bar": "7.0.3",
     "@ionic/angular": "^8.0.0",
     "@ionic/pwa-elements": "^3.3.0",
+    "chart.js": "^4.5.1",
     "firebase": "^12.4.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
